# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =

== 2.6 ==
  * Ensure WiMAX givenname is non empty (#885)
  * Clean up the email on handling a project join request (#881)
  * Check for valid project_id in do-handle-project-join-request (#886)

== 2.5.1 ==
  * Send only current projects, not expired, to GEMINI (#887)

== 2.5 ==
  * Improve error reporting in geni-revoke-member-privilege (#853)
  * Quiet a debug printing rspecs (#858)
  * In WiMAX, handle user swith no sn or givenName. Also fix a logic error
    causing projects to seem not WiMAX enabled. (#859)
  * Slice names are now unique only to the project, since ProtoGENI
  made a fix (#433)
  * Refer to scripts without the .py extension (#862)
  * Undefined index when generating a cert from a bad CSR (#870)
  * Add language to discourage people from randomly trying to join
    unknown projects, and to discourage leads from adding them. (#875)
  * Avoid double registration: do-register checks for existing account (#864)
  * Sort projects on home page and projects page by name (#873)
  * Add language to clarify who can be a project lead and what the 
    responsibilities are when requesting to be a lead. (#877)

== 2.4 ==
  * Fix geni-revoke-member-privileges script (#716)
  * Quiet some logging in printing rspecs (#836)
  * Rearrange Profile tab (#812)
  * Remove debug log message in OpenID server (#828)
  * Remove "Manage RSpecs" button from profile tab and improve
    headers and links on RSpecs page(#810)
  * Clearing or extending project expiration now un-expires the
    project if applicable. (#841)
  * Fix revocation of operator privileges (#668)
  * Make slice member names be mailto links on slice page (#538)
  * Add project expiration time in the slice view (#838)
  * Added SSL tab to Profile page with the ability to generate or
    download your SSL certificate (#708)