@@ -39,7 +39,7 @@ $slice_name = "None";
 
 include("tool-lookupids.php");
 
-if (isset($slice_expired) && $slice_expired == 't') {
+if (isset($slice_expired) && convert_boolean($slice_expired)) {
   if (! isset($slice_name)) {
     $slice_name = "";
   }
