@@ -76,7 +76,7 @@ if (! isset($am) || is_null($am)) {
   no_am_error();
 }
 
-if (isset($slice_expired) && $slice_expired == 't') {
+if (isset($slice_expired) && convert_boolean($slice_expired)) {
   if (! isset($slice_name)) {
     $slice_name = "";
   }
