@@ -67,7 +67,7 @@ foreach($my_slice_objects as $slice) {
   // error_log("SLICE = " . print_r($slice, true));
   $slice_id = $slice[SA_SLICE_TABLE_FIELDNAME::SLICE_ID];
   $expired = $slice[SA_SLICE_TABLE_FIELDNAME::EXPIRED];
-  if($expired == 't') 
+  if(convert_boolean($expired)) 
     $expired_slices[$slice_id] = $slice;
   else
     $unexpired_slices[$slice_id] = $slice;
@@ -135,7 +135,7 @@ if (count($my_slice_objects) > 0) {
     }
     $isSliceExpired = False;
     $disable_buttons_str = "";
-    if (isset($slice_expired) && $slice_expired == 't') {
+    if (isset($slice_expired) && convert_boolean($slice_expired)) {
       $isSliceExpired = True;
       $disable_buttons_str = " disabled";
     }
